--- a/src/app/pedido/registrar-pedido/registrar-pedido.page.html
+++ b/src/app/pedido/registrar-pedido/registrar-pedido.page.html
@@ -176,6 +176,15 @@
         </ion-select>
   </ion-item>
 
+  <ion-item>
+        <ion-label position="floating">Notas (Opcional)</ion-label>
+        <ion-textarea 
+          formControlName="notas" 
+          name="notas"
+          rows="3">
+        </ion-textarea>
+      </ion-item>
+
   </div>
   
   <ion-item-divider>
@@ -230,7 +239,8 @@
         </ion-col>
         <ion-col size="6">
           <ion-button expand="block" color="primary" 
-          [disabled]="miFormulario.invalid || productosseleccionados.length===0">
+          [disabled]="miFormulario.invalid || productosseleccionados.length===0"
+          (click)="registrarPedidoFinal()">
             REGISTRAR PEDIDO ( S/{{totalGlobal}})
           </ion-button>
         </ion-col>
