probando el pws , la camara y la logica de actualizacion y registro de producto, centrando mensaje inicial en registro de pedidos

--- a/src/app/producto/actualizar-producto/actualizar-producto.page.html
+++ b/src/app/producto/actualizar-producto/actualizar-producto.page.html
@@ -29,6 +29,12 @@
         {{ (imagenPreviewUrl || productoActual?.imagen_url) ? 'CAMBIAR IMAGEN' : 'AGREGAR IMAGEN' }}
       </ion-button>
 
+      <ion-button expand="block" fill="outline" (click)="probarCamara()" type="button">
+        <ion-icon slot="start" name="camera"></ion-icon>
+        Probar Camara
+      </ion-button>
+
+
       <input 
         type="file" 
         #fileInput 
