--- a/src/app/cliente/listar-cliente/listar-cliente.page.html
+++ b/src/app/cliente/listar-cliente/listar-cliente.page.html
@@ -11,7 +11,7 @@
 <ion-content [fullscreen]="true"  fixed-slot-placement="before">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">LISTA DE CLIENTES</ion-title>
     </ion-toolbar>
   </ion-header>
 
