--- a/src/app/pedido/registrar-pedido/registrar-pedido.page.html
+++ b/src/app/pedido/registrar-pedido/registrar-pedido.page.html
@@ -233,7 +233,7 @@
     <ion-grid>
       <ion-row>
         <ion-col size="6">
-          <ion-button expand="block" color="medium" fill="outline">
+          <ion-button expand="block" color="medium" fill="outline" (click)="cancelarcarro()">
             CANCELAR
           </ion-button>
         </ion-col>
