--- a/src/app/pedido/registrar-pedido/registrar-pedido.page.scss
+++ b/src/app/pedido/registrar-pedido/registrar-pedido.page.scss
@@ -170,3 +170,28 @@ transition: transform 0.1s;
 
 
 }
+
+.mensaje-inicio{
+  text-align: center;
+  color:#aaa;
+  font-size:20px;
+  margin-top: 40px;
+
+  ion-icon{
+
+    font-size:60px;
+    margin-bottom: 10px;
+  }
+
+  .clienteelecto{
+  background: #f9f9f9;
+  border-radius: 10px;
+  margin: 10px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+
+
+  }
+
+
+
+}
