--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,7 +6,7 @@
   right: 0;
   top: 50%;
   transform: translateY(-50%);
-  background-color: blanchedalmond;
+  --background: rgb(90, 68, 36);
 }
 
 #container strong {
@@ -25,4 +25,39 @@
 
 #container a {
   text-decoration: none;
+}
+
+.item-cliente{
+
+ --background:#e2e4eb;
+ --border-radius:10px;
+margin-bottom: 10px;
+
+   h2{
+    font-weight: bold;
+    color:#3880ff;
+    font-size: 1.2rem;
+
+   }
+   p{
+     color:#999;
+     font-style: italic;
+   }
+   ion-buttons{
+    ion-button{
+
+
+      &:hover{
+
+        opacity:0.7;
+      }
+    }
+
+
+
+
+
+
+   }
+
 }
