--- a/src/app/cliente/actualizar-cliente/actualizar-cliente.page.html
+++ b/src/app/cliente/actualizar-cliente/actualizar-cliente.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons>
-        <ion-back-button defaultHref="/listar-cliente"></ion-back-button>
-      </ion-buttons>
+    <ion-button (click)="cancelar()">
+    <ion-icon slot="icon-only" name="arrow-back"></ion-icon> 
+  </ion-button>
     <ion-title>ACTUALIZAR CLIENTE</ion-title>
   </ion-toolbar>
 </ion-header>
