--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,6 +10,19 @@
       <ion-title size="large">login</ion-title>
     </ion-toolbar>
   </ion-header> -->
+  <div class="imagenlogin">
+    <img src="assets/loginropa.jpg" alt="ropa">
+  </div>
+
+  <div class="marca-empresa">
+    <div class="logo">
+      <img src="assets/logomkt4.png" alt="logo" class="b-naranja">
+      <div class="texto-logo">
+        <h1>MKT</h1>
+        <p>PUBLICIDAD Y CONFECCIONES</p>
+      </div>
+    </div>
+  </div>
 
   <form (ngSubmit)="login()">
     <ion-item>
