--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,29 +1,3 @@
-/*ion-content {
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-  height: 100vh !important;
-  --padding-top: 0 !important;
-  --padding-bottom: 0 !important;
-  --offset-top: 0 !important;
-  --offset-bottom: 0 !important;
-  background-color: #216d8b;
-  padding: 20px;
-  overflow: hidden; /* evita scroll inesperado 
-}
-
-form {
-  background: rgb(207, 166, 91);
-  padding: 30px;
-  border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-  width: 100%;
-  max-width: 400px;
-  margin: 0 auto;
-  text-align: center;
-}*/
-
-// login.page.scss
 
 ion-header {
   ion-toolbar {
@@ -39,18 +13,18 @@ ion-header {
 }
 
 ion-content {
-  --background: #4BC3C8;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  //--background: #4BC3C8;
+  --background: linear-gradient(to bottom, #e0f7f9 0%, #2bb1c1 100%);
+  
 }
 
 // Contenedor del formulario centrado
 ion-content::part(scroll) {
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 20px;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 0px;
 }
 
 form {
@@ -106,17 +80,60 @@ form {
       --box-shadow: 0 6px 16px rgba(255, 107, 53, 0.4);
     }
   }
+
   
-  .error-message,
-  div[style*="color:red"] {
-    color: #f44336 !important;
-    text-align: center;
-    margin-top: 15px;
-    font-size: 13px;
-    padding: 10px;
-    background: #ffebee;
-    border-radius: 6px;
-  }
+  
+  
+}
+
+.imagenlogin{
+
+width: 100%;
+height: 35vh;
+overflow: hidden;
+clip-path: ellipse(130% 100% at 50% 0%);
+margin-bottom: 30px;
+img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+}
+
+}
+
+.marca-empresa{
+ align-items: center;
+ display:flex;
+ flex-direction: column;
+ padding: 10px;
+
+ .logo{
+
+ display:flex;
+ align-items: center;
+ margin-bottom: 30px;
+ margin-top:10px;
+
+ .b-naranja{
+
+  width: 90px;
+  margin-right: 10px;
+ }
+
+ h1{
+  font-weight: 800;
+  margin:0;
+  color:#333;
+ }
+ p{
+  font-size: 10px;
+  letter-spacing: 2px;
+  color:#555;
+ }
+
+ }
+ 
+
 }
 
 // Animación de entrada suave
