--- a/src/app/pedido/registrar-pedido/registrar-pedido.page.scss
+++ b/src/app/pedido/registrar-pedido/registrar-pedido.page.scss
@@ -148,6 +148,23 @@ ion-button {
   }
 }*/
 
+ion-header {
+  ion-toolbar {
+    --background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    --color: white;
+    
+    ion-title {
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 1.2px;
+    }
+    
+    ion-back-button {
+      --color: white;
+    }
+  }
+}
+
 
 .listahorizontal{
 display: flex;
