--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -18,6 +18,7 @@
 <ion-col size="6">
  <ion-card  button (click)="abrirclientes()">
 <ion-card-header>
+<ion-icon name="people"  style="font-size: 40px;"></ion-icon>  
 <ion-card-title>CLIENTES</ion-card-title>
 </ion-card-header>
  </ion-card>
@@ -27,6 +28,7 @@
        <ion-col size="6">
         <ion-card button (click)="abrirproducto()">
           <ion-card-header>
+            <ion-icon name="cube" style="font-size: 40px;"></ion-icon>
             <ion-card-title>Productos</ion-card-title>
           </ion-card-header>
         </ion-card>
@@ -39,6 +41,7 @@
       <ion-col size="6">
         <ion-card button (click)="abrirpedido()">
           <ion-card-header>
+            <ion-icon name="cart"  style="font-size: 40px;"></ion-icon>
             <ion-card-title>Pedidos</ion-card-title>
           </ion-card-header>
         </ion-card>
@@ -47,6 +50,7 @@
       <ion-col size="6">
         <ion-card button (click)="abrirvisualizar()">
           <ion-card-header>
+            <ion-icon name="clipboard"  style="font-size: 40px;"></ion-icon>
             <ion-card-title>Visualizar Pedidos</ion-card-title>
           </ion-card-header>
         </ion-card>
