--- a/src/app/producto/listar-producto/listar-producto.page.scss
+++ b/src/app/producto/listar-producto/listar-producto.page.scss
@@ -6,7 +6,7 @@
     /* 2. Propiedad CLAVE para el ajuste */
     object-fit: contain;
     
-    /* 3. (Opcional) Centrar la imagen si el tamaño original es diferente */
+    /* 3. Centrar la imagen si el tamaño original es diferente */
     object-position: center; 
 }
 
