--- a/src/app/cliente/actualizar-cliente/actualizar-cliente.page.html
+++ b/src/app/cliente/actualizar-cliente/actualizar-cliente.page.html
@@ -60,13 +60,39 @@
 
   </ion-list>
 
-  <div class="cajabotones">
-    <ion-button type="submit" expand="block" color="success" [disabled]="clienteForm.invalid">
-      ACTUALIZAR
-    </ion-button>
-    <ion-button type="button" expand="block" color="danger" (click)="cancelarEdicion()">
+  <!--<div class="cajabotones">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-button type="submit" expand="block" color="success" [disabled]="clienteForm.invalid">
+           ACTUALIZAR
+         </ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button type="button" expand="block" color="danger" (click)="cancelarEdicion()">
                 CANCELAR
-    </ion-button>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    
+    
+  </div>-->
+  <div class="cajabotones">
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="6">
+          <ion-button type="submit" expand="block" color="success" [disabled]="clienteForm.invalid">
+           ACTUALIZAR
+         </ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-button type="button" expand="block" color="danger" (click)="cancelarEdicion()">
+                CANCELAR
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 
   
