--- a/src/app/cliente/listar-cliente/listar-cliente.page.scss
+++ b/src/app/cliente/listar-cliente/listar-cliente.page.scss
@@ -26,7 +26,7 @@ ion-title {
 
 ion-list {
   margin-top: 12px;
-  background: #fff;
+  background:transparent;
   border-radius: 16px;
   box-shadow: 0 2px 10px 0 rgba(40, 60, 100, 0.09);
   padding-bottom: 16px;
