--- a/src/app/menu/menu.page.scss
+++ b/src/app/menu/menu.page.scss
@@ -33,6 +33,14 @@ ion-row {
   margin-bottom: 20px;
 }
 
+
+ion-icon {
+  /* Un color gris muy oscuro casi negro se ve más fino que el azul */
+  color: #333333; 
+  /*  pequeño brillo si quieres que resalten más */
+  filter: drop-shadow(0px 2px 2px rgba(0,0,0,0.1));
+}
+
 // ============================================
 // CARDS (ESTILO EXACTO DE LA IMAGEN)
 // ============================================
